--- a/css/Style.css
+++ b/css/Style.css
@@ -19,7 +19,7 @@
     --basic-matterhorn: #4D4D4D;
     --basic-patterns-blue: #D7DCDE;
     --basic-heather: #B4B9BB;
-    --basic-gainsboro: #DFDFDF;
+    --basic-gainsboro: #DBDBDB;
     --basic-ligth-grey: #D5D5D5;
 
     /*Текст*/
@@ -99,6 +99,7 @@ ul{
     width: 1160px;
     margin: 0 auto;
     padding: 0;
+
 }
 .main-header-logo{
     width: 160px;
@@ -164,7 +165,6 @@ ul{
     margin-bottom: 25px;
 }
 .slider-small{
-
     margin-bottom: 38px;
 }
 .slider_image{
@@ -391,7 +391,7 @@ ul{
 
 /*Map*/
 .footer{
-    margin-top: 80px;
+    /*margin-top: 80px;*/
     position: relative;
 }
 .map{
@@ -408,7 +408,7 @@ ul{
     display: block;
     position: absolute;
     top: 55px;
-    left: 690px;
+    left: 490px;
     width: 230px;
     height: 308px;
     padding-left: 50px;
@@ -628,22 +628,50 @@ ul{
 }
 
 /*Catalog.html*/
-
+.catalog_title_container{
+    display: block;
+    background-color: var(--basic-header);
+}
 .page_catalog{
+    margin-top: 55px;
     display: grid;
     align-content: start;
     grid-template-columns: 280px 1fr;
 }
 .catalog_title{
-    grid-column: 1/-1;
     margin:0;
-    padding: 0;
-    justify-content: center;
+    padding:0;
+    padding-top: 78px;
+    padding-bottom: 108px;
     background-color: var(--basic-header);
+    font-weight: 500;
+    font-size: 55px;
+    line-height: 55px;
+    text-align: center;
 }
 /*Filter*/
-.filter_text, 
-.button_text{
+.filters{
+    width: 260px;
+    outline: 2px solid yellow;
+    outline-offset: -2px;
+}
+.filter fieldset{
+    border: none;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 26px;
+}
+.filter fieldset:nth-child(1){
+    margin-bottom: 53px;
+}
+.filter fieldset:nth-child(3){
+    margin-bottom: 29px;
+}
+.filter legend{
+    margin-bottom: 16px;
+}
+
+.filter_text{
     font-weight: 700;
     font-size: 18px;
     line-height: 30px;
@@ -651,13 +679,39 @@ ul{
     text-transform: uppercase;
 }
 .price_filter{
+    margin-top: 33px;
+    margin-bottom: 14px;
     background-color: var(--basic-header);
+}
+.price_filter input{
+    width: 260px;
+    height: 74px;
+    border-radius: 3px;
 }
 .filter_range{
     font-size: 16px;
     line-height: 22px;
     text-transform: uppercase;
+}/*
+.filter_text{
+    margin-bottom: 16px;
 }
+.filter_text:nth-child(1){
+    margin-bottom: 48px;
+}*/
+.filter ul{
+    list-style: none;
+    margin:0;
+    padding:0;
+    line-height: 19px;
+}
+.filter_item{
+    margin-bottom: 20px; /*Расстояние между пунктами формы 2*/
+}
+.filter_item2{
+    margin-bottom: 21px; /*Расстояние между пунктами формы 3*/
+}
+
 .filter_input{
     width: 80px;
     height: 38px;
@@ -666,6 +720,7 @@ ul{
     border-radius: 3px;
     text-align: center;
     color: var(--basic-cod-grey);
+
 }
 .filter_option{
     color: var(--basic-cod-grey);
@@ -678,6 +733,14 @@ ul{
     border-radius: 3px;
     border: none;
     font-weight: 500;
+    border-radius: 3px;
+}
+.button_text{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+    color: var(--basic-black);
+    text-transform: uppercase;
 }
 .filter_button:hover{
     background-color: var(--basic-patterns-blue);
@@ -686,9 +749,31 @@ ul{
     color: var(--basic-black);
     background-color: var(--basic-ligth-grey);
     box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+    color: rgba(0, 0, 0, 0.3);
 }
 .button_text:active{
     color: rgb(0,0,0, 0.3);
+}
+.sorting_system_container{
+    display: flex;
+    width: 759px;
+    height: 30px;
+    align-items: center;
+    justify-content: start;
+}
+.sorting_system_container ul{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 360px;
+    margin:0;
+    padding:0;
+}
+.sorting_system_container p{
+    margin-right: 266px;
+}
+.sorting_element{
+    margin-right: 26px;
 }
 .sorting_system{
     font-size: 14px;
@@ -696,6 +781,8 @@ ul{
     color: var(--basic-black);
     text-transform: uppercase;
     opacity: 0.3;
+    margin:0;
+    padding:0;
 }
 .sorting_system:hover{
     opacity: 0.6;
@@ -705,34 +792,94 @@ ul{
 }
 
 /*Good*/
-/*
-.good{
-    background-color: var(--basic-matterhorn);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-
+.main_catalog{
+    margin: 0;
+    padding: 0;
+    margin-top: 88px;
+    padding-left: 2px;
 }
-.good:before{
+.good{
+    width: 358px;
+    height: 576px;
+    margin-right: 39px;
+    margin-bottom: 71px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    position: relative;
+    border: 1px solid var(--basic-header);
+}
+.good:nth-child(2n){
+    margin-right: 0px;
+}
+.good:nth-last-child(2),
+.good:last-child{
+    margin-bottom: 0;
+}
+.good:hover{
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+.good a{
+    width: 358px;
+    height: 576px;
+    margin: 0;
+}
+.good a::before{
     content: "";
     position: absolute;
     width: 360px;
     height: 40px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
-    background-color: var(--basic-matterhorn);
-    opacity: 0.12;
-    top: -39px;
+    background-color: var(--basic-header);
+    top:-40px;
+    left: -1px;
 }
-*/
+.good a::after{
+    content: "";
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background-color: var(--basic-white);
+    left: 37px;
+    top: -27px;
+    box-shadow: 24px 0 0 0 var(--basic-white), -24px 0 0 0 var(--basic-white);
+}
+.good a::before:hover{
+    background-color: var(--basic-matterhorn);
+}
+.catalog_container{
+    margin:0;
+    padding:0;
+    margin-left: 119px;
+   /*outline: 5px solid black;
+    outline-offset: -5px;*/
+}
+.catalog_list{
+    display: flex;
+    flex-wrap: wrap;
+    padding:0;
+    margin:0;
+    list-style: none;
+    position: relative;
+}
+/*
 .card{
-    width:360px;
+    display: none;
+    width: 358px;
     height: 231px;
+    text-align: center;
     background-color: var(--basic-header);
     text-align: center;
 }
 .card:hover{
-    display: block;
-    text-align: center;
+    content: "";
+    overflow: hidden;
+    position: absolute;
+    width: 358px;
+    height: 231px;
+    background-color: var(--basic-header);
+    /*z-index: 1;
 }
 .card .filter_text:hover{
     color: var(--basic-wild-watermelon);
@@ -757,31 +904,62 @@ ul{
 .price_button:active{
     box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
     color: var(--basic-white);
+}*/
+.catalog_page{
+    display: flex;
+    flex-direction: row;
+    margin:0;
+    padding:0;
+    margin-top: 58px;
+    margin-bottom: 60px;
 }
-.active_page{
-    width: 50px;
-    height: 50px;
+.catalog_page li{
+    display: flex;
+}
+.catalog_page a{
+    display: flex;
+    width: 44px;
+    height: 44px;
+    margin-right: 11px;
     border-radius: 3px;
-    border: 2px solid rgba(0, 0, 0, 0.0001);
-    color: var(--basic-black);
-    line-height: 18px;
-    font-weight: 500;
-
-}
-.page_number{
+    justify-content: center;
+    align-items: center;
     background-color: var(--basic-header);
-    border-radius: 3px;
-    width: 50px;
-    height: 50px;
+    border: 3px solid var(--basic-header);
+    font-weight: 500;
+    line-height: 18px;
 }
-.page_number:hover{
+.catalog_page .active_page{
+    border: 3px solid var(--basic-gainsboro);
+    background-color: var(--basic-white);
+}/*
+.catalog_page .page_number{
+    background-color: var(--basic-header);
+}*/
+.catalog_page .filter_button{
+    width: 264px;
+}
+
+.page_number:hover,
+.catalog_page .filter_button:hover{
     background-color: var(--basic-gainsboro);
+    border: 3px solid var(--basic-gainsboro);
 }
 .page_number:active{
+    width: 50px;
+    height: 50px;
+    border: none;
     box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
     background-color: var(--basic-ligth-grey);
-    color: var(--basic-black);
-    opacity: 0.3;
+    color: rgba(0, 0, 0, 0.3);
+}
+.catalog_page .filter_button:active{
+    border: none;
+    width: 270px;
+    height: 50px;
+    box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
+    background-color: var(--basic-ligth-grey);
+    color: rgba(0, 0, 0, 0.3);
 }
 
 /*Grid*/
