--- a/css/Style.css
+++ b/css/Style.css
@@ -21,6 +21,7 @@
     --basic-heather: #B4B9BB;
     --basic-gainsboro: #DBDBDB;
     --basic-ligth-grey: #D5D5D5;
+    --basic-dark-grey: #ABABAB;
 
     /*Текст*/
     --basic-black: #000000;
@@ -70,8 +71,9 @@ ul{
 }
 /*Main navigation*/  
 .main-header{
-    padding-top: 48px;
+    padding-top: 45px;
     background-color: var(--basic-header);
+    padding-bottom: 3px;
 }
 .main-navigation{
     display: flex;
@@ -94,14 +96,22 @@ ul{
 }
 .slider-container .container{
     justify-content: start;
+    position: relative;
 }
 .container{
     width: 1160px;
     margin: 0 auto;
+    padding:0;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.partner_logo_container .container{
+    width: 1160px;
     padding: 0;
-
+    margin: 0 auto;
 }
 .main-header-logo{
+    margin-top:2px;
     width: 160px;
     height: 65px;
     }
@@ -111,21 +121,25 @@ ul{
     margin: 0;
     padding: 0;
     align-items: center;
-    padding-top: 17px;
+    padding-top: 22px;
 }
 .site-navigation{
     display: flex;
     justify-content: space-between;
-    width: 441px;
+    width: 436px;
     margin: 0;
-    margin-right: 269px;
+    margin-right: 245px;
+
 }
 .user-navigation{
-    max-width: 115px;   
+    width: 116px;
+    text-align: right;
+    position: relative;  
 }
 .site-navigation a,
 .user-navigation a {
   color: var(--basic-black);
+
 }
 .site-navigation a:hover,
 .user-navigation a:hover{
@@ -136,11 +150,24 @@ ul{
     color: var(--basic-black);
     opacity: 0.3;
 }
+.user-navigation::before{
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-image: url("../img/cart-icon.svg");
+    background-repeat: no-repeat;
+    top: 8px;
+    left: 2px;
+    
+}
+
 /*активный, находимся на странице*/
 .site-navigation .active_page{
-    padding-bottom: 12px;
+    padding-bottom: 11px;
     border-bottom: 2px solid var(--basic-wild-watermelon);
 }
+
 
 /*Slider*/
 .main_container{
@@ -151,45 +178,99 @@ ul{
     margin: 0;
     padding: 0;
     background-color: var(--basic-header);
+   
+}
+.slider_list{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+}
+.slider_content{
+    width: 1160px;
+    margin:0;
+    padding:0;
+
 }
 .slider_text{
-    width: 396px;
+    margin:0;
+    padding:0;
+    /*padding-bottom: 80px;*/
+}
+.site-wrapper-1{
+    position: relative;
+    /*background-color: var(--basic-header);*/
+    background-image: url(../img/nerds-index-slide1.png);
+    background-repeat: no-repeat;
+    background-position: 397px 0px;
+}
+.site-wrapper-2{
+    position: relative;
+    /*background-color: var(--basic-header);*/
+    background-image: url(../img/nerds-index-slide2.png);
+    background-repeat: no-repeat;
+    background-position: 397px 0px;
+}
+.site-wrapper-3{
+    position: relative;
+    /*background-color: var(--basic-header);*/
+    background-image: url(../img/nerds-index-slide3.png);
+    background-repeat: no-repeat;
+    background-position: 397px 0px;
+}
+.slide{
+    display: none;
+}
+.slide_current{
+    display: block;
+}
+.slider_control .current{
+    border: 2px solid var(--basic-slider);
+    box-sizing: border-box;
 }
 .slider-big{
+    margin:0;
+    padding:0;
+    padding-top:78px;
+    width: 538px;
     font-weight: 500;
     font-size: 55px;
     line-height: 55px;
     color: var(--basic-black);
     font-style: normal;
-    margin-top: 78px;   
     margin-bottom: 25px;
+    /*order:2;*/
 }
 .slider-small{
-    margin-bottom: 38px;
-}
+    margin-bottom: 40px;
+}/*
 .slider_image{
     display: block;
+    position: relative;
     width: 760px;
     height: 431px;
-}
+    /*order: 1;*/
+
 .gb_properties{
     display: inline-block;
-    width: 240px;
-    height: 50px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     color:var(--basic-white);
     font-weight: 500;
     line-height: 18px;
     text-align: center;
     text-transform: uppercase;
     border-radius: 3px;
+
 }
 .gb_properties:active{
     box-shadow: inset 0px 3px 0px rgba(0, 1, 1, 0.1);
     color: rgba(255, 255, 255, 0.3);
 }
 .slider-button{
-    width: 240px;
-    height: 50px;
+    margin-bottom: 78px;
+    padding-left: 54px;
+    padding-right: 54px;
     background-color: var(--basic-wild-watermelon);
 }
 .slider-button:hover{
@@ -198,6 +279,26 @@ ul{
 .slider-button:active{
     background-color: var(--basic-mahagone);
 }
+.slider_control{
+    position: absolute;
+    display: flex;
+    top: 318px;
+    left: 556px;
+    width: 88px;
+    justify-content: space-between;
+    z-index: 20;
+}
+.slider_control button{
+    padding: 0;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    border: none;
+    background-color: var(--basic-white);  
+    cursor: pointer;
+}
+
+
 /*Catalog*/
 .catalog-container{
     /*margin:0;
@@ -207,7 +308,7 @@ ul{
 .catalog_items{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    height: 426px;
+    height: 427px;
     column-gap: 39px;
     margin:0;
     padding:0;
@@ -229,14 +330,17 @@ ul{
     color: var(--basic-black);
 }
 .catalog_item_container p{
-    margin-bottom: 29px;
+    margin-bottom: 32px;
     padding-right: 95px;
     /*letter-spacing: 0.02px;*/
     line-height: 24px;
 }
 .catalog-button{
+    padding-left: 39px;
+    padding-right: 39px;
+    /*
     width: 160px;
-    height: 50px;
+    height: 50px;*/
 }
 .button-red{
     background-color: var(--basic-wild-watermelon);
@@ -271,14 +375,21 @@ ul{
 .description_container{
     margin-top: 74px;  
 }*/
+/*
 .description_container .container{
+    
     border-bottom: 2px solid var(--basic-header);  
-}
+}*/
 .description_text{
     display: block;
+    margin:0;
+    padding:0;
+    position: relative;
     margin-top: 75px;
     margin-bottom: 48px;
     width: 660px;
+    padding:0;
+    
 }
 .description-big{
     margin:0;
@@ -301,7 +412,20 @@ ul{
     letter-spacing: 0.07px;
 }
 .description_list li{
-    margin-top: 23px;
+    position: relative;
+    margin:0;
+    padding:0;
+    margin-top: 24px;
+    
+}
+.description_list li::before{
+    content:"";
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    top: 11px;
+    left: -39px;
+    background-color: var(--basic-wild-watermelon);
 }
 .description_list li{
     list-style: none;
@@ -313,7 +437,7 @@ ul{
     margin:0;
     padding:0;
     width: 360px;
-    margin-top: 40px;
+    margin-top: 41px;
     margin-left: 141px;
     }
 .description_statistic img{
@@ -363,22 +487,35 @@ ul{
 .partner_list{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    /*height: 178px;*/
+    justify-content: space-between;
+    height: 178px;
     margin:0;
     padding:0;
-    margin-top: 46px;
+    /*padding-top: 46px;*/
     border-bottom: 2px solid var(--basic-header);
+    border-top: 2px solid var(--basic-header);
 }
 .partner{
     display: flex;
-    width: 292px;
+    position: relative;
+    width: 290px;
     justify-content: center;
-    align-self: center;
+    align-items: center;
     margin:0;
     padding:0;
-    margin-bottom: 44px;
+    /*margin-bottom: 44px;*/
+
 }
+.partner:not(:nth-child(0)) + .partner::before{
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 52px;
+    background-color: var(--basic-header);
+    top: 64px;
+    left:-10px;
+}
+
 .partner_logo{
     opacity: 0.2;
 }
@@ -400,6 +537,8 @@ ul{
     padding: 0;
 }
 .map_size{
+    margin-top:80px;
+    margin-bottom: 68px;
     min-width: 100%;
     height: 416px;
     border: none;
@@ -457,7 +596,7 @@ ul{
 }
 .social{
     min-width: 100%;
-    margin-top: 68px;
+    margin-top: 6px;
 
 }/*
 .logo_container{
@@ -527,12 +666,12 @@ ul{
     font-size: 36px;
     line-height: 36px;
     margin:0;
-    padding-top:10px;
+    padding-top:5px;
     letter-spacing: 0.1px;
 }
 .friendship_content{
     line-height: 22px;
-    margin-top: 8px;
+    margin-top: 10px;
 }
 
 /*Popup*/
@@ -633,7 +772,7 @@ ul{
     background-color: var(--basic-header);
 }
 .page_catalog{
-    margin-top: 55px;
+    margin-top: 52px;
     display: grid;
     align-content: start;
     grid-template-columns: 280px 1fr;
@@ -651,21 +790,33 @@ ul{
 }
 /*Filter*/
 .filters{
+    
     width: 260px;
-    outline: 2px solid yellow;
-    outline-offset: -2px;
 }
 .filter fieldset{
     border: none;
     padding: 0;
     margin: 0;
+    margin-top:4px;
     margin-bottom: 26px;
 }
 .filter fieldset:nth-child(1){
-    margin-bottom: 53px;
+    margin-bottom: 52px;
 }
+
 .filter fieldset:nth-child(3){
     margin-bottom: 29px;
+}
+.filter_ranges{
+    margin:0;
+    padding:0;
+    border: none;
+}
+.filter_ranges legend{
+    font-size: 18px;
+    line-height: 24px;
+    text-transform: uppercase;
+    font-weight: 700;
 }
 .filter legend{
     margin-bottom: 16px;
@@ -677,22 +828,85 @@ ul{
     line-height: 30px;
     color: var(--basic-black);
     text-transform: uppercase;
+    letter-spacing: 0.3px;
+
 }
 .price_filter{
-    margin-top: 33px;
-    margin-bottom: 14px;
-    background-color: var(--basic-header);
-}
+    width: 260px;
+    margin-top: 38px;
+    /*margin-bottom: 14px;*/
+    /*background-color: var(--basic-header);*/
+}/*
 .price_filter input{
     width: 260px;
     height: 74px;
     border-radius: 3px;
+}*/
+.range-controls{
+    position: relative;
+    height: 41px;
+    margin-bottom: 13px;
+    padding-top: 39px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: var(--basic-header);
+    border-radius: 5px;
 }
+.range-controls .scale{
+    height: 2px;
+    background: var(--basic-patterns-blue);
+}
+.range-controls .bar{
+    width: 70%;
+    height: 2px;
+    background: var(--basic-jade);
+}
+.range-controls .toggle{
+    position: absolute;
+    top: 31px;
+    left: 0;
+    width: 4px;
+    height: 4px;
+    padding:0;
+    border: 8px solid var(--basic-white);
+    background-color: var(--basic-dark-grey);
+    border-radius: 50%;
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+}
+.range-controls .toggle-min{
+    left: 18px;
+}
+.range-controls .toggle-max{
+    left: 160px;
+}
+.price-controls{
+    display: flex;
+    justify-content: space-between;
+}
+.price-controls label{
+    text-transform: uppercase;
+    font-size: 16px;
+}
+.price-controls input{
+    width: 60px;
+    padding: 10px;
+    margin-left: 10px;
+    text-align: center;
+    color: var(--basic-cod-grey);
+    border: none;
+    border-radius: 5px;
+    background: var(--basic-header);
+    font-family: inherit;
+    font-size: inherit;
+}
+/*
 .filter_range{
     font-size: 16px;
     line-height: 22px;
     text-transform: uppercase;
-}/*
+}*/
+/*
 .filter_text{
     margin-bottom: 16px;
 }
@@ -705,11 +919,96 @@ ul{
     padding:0;
     line-height: 19px;
 }
-.filter_item{
-    margin-bottom: 20px; /*Расстояние между пунктами формы 2*/
+.filter .filter_radio legend,
+.filter .filter_checkbox legend{
+    margin:0;
+    padding:0;
+    margin-bottom: 14px;
 }
+.filter_radio ul,
+.filter_checkbox ul{
+    padding:0;
+    margin:0;
+    margin-left: 37px;
+}
+.filter_item, 
 .filter_item2{
-    margin-bottom: 21px; /*Расстояние между пунктами формы 3*/
+    margin-bottom: 21px; /*Расстояние между пунктами формы 2*/
+}
+.filter_item label,
+.filter_item2 label{
+    position: relative;
+    display: block;
+    cursor: pointer;
+    user-select: none;
+
+}
+
+.filter_input_radio + label::before{
+    content:"";
+    position: absolute;
+    width: 17px;
+    height: 17px;
+    top: -3px;
+    left: -36px;
+    border: 4px solid var(--basic-matterhorn);
+    border-radius: 50%;
+    background-color: transparent;
+    opacity: 0.4;
+}
+.filter_input_radio:checked + label::after{
+    content:"";
+    position: absolute;
+    width: 9px;
+    height: 9px;
+    top: 5px;
+    left: -28px;
+    border-radius: 50%;
+    background-color: var(--basic-matterhorn);
+    opacity: 0.4;
+}
+.filter_input_checkbox + label::before{
+    content:"";
+    position: absolute;
+    /*width: 19px;
+    height: 19px;
+    top: -1px;
+    left: -36px;
+    border: 2px solid var(--basic-matterhorn);
+    border-radius: 3px;
+    background-color: transparent;*/
+    width: 23px;
+    height: 23px;
+    top: 0px;
+    left: -35px;
+    background-image: url(../img/checkbox-off.svg);
+    background-repeat: no-repeat;
+    opacity: 0.4;
+}
+.filter_input_checkbox:checked + label::after{
+    content:"";
+    position: absolute;
+    background-image: none;
+    width: 25px;
+    height: 23px;
+    top: 0px;
+    left: -35px;
+    background-image: url(../img/checkbox-on.svg);
+    background-repeat: no-repeat;
+    opacity: 0.4;
+}
+
+.filter_input_radio:hover + label:hover::before,
+.filter_input_radio:hover:checked + label:hover::after,
+.filter_input_checkbox:hover + label:hover::before,
+.filter_input_checkbox:hover:checked + label:hover::after{
+    opacity: 1;
+}
+.filter_input_radio:disabled + label:disabled::before,
+.filter_input_radio:disabled:checked + label:disabled::after,
+.filter_input_checkbox:disabled + label:disabled::before,
+.filter_input_checkbox:disabled:checked + label:disabled::after{
+    opacity: 0.1;
 }
 
 .filter_input{
@@ -720,11 +1019,11 @@ ul{
     border-radius: 3px;
     text-align: center;
     color: var(--basic-cod-grey);
-
 }
 .filter_option{
     color: var(--basic-cod-grey);
     line-height: 19px;
+
 }
 .filter_button{
     background-color: var(--basic-header);
@@ -760,6 +1059,7 @@ ul{
     height: 30px;
     align-items: center;
     justify-content: start;
+    margin:0;
 }
 .sorting_system_container ul{
     display: flex;
@@ -773,7 +1073,10 @@ ul{
     margin-right: 266px;
 }
 .sorting_element{
+    margin:0;
+    padding:0;
     margin-right: 26px;
+    position: relative;
 }
 .sorting_system{
     font-size: 14px;
@@ -783,6 +1086,13 @@ ul{
     opacity: 0.3;
     margin:0;
     padding:0;
+}
+.arrow::before{
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: var(--basic-ligth-grey);
 }
 .sorting_system:hover{
     opacity: 0.6;
@@ -799,6 +1109,7 @@ ul{
     padding-left: 2px;
 }
 .good{
+    position: relative;
     width: 358px;
     height: 576px;
     margin-right: 39px;
@@ -807,6 +1118,7 @@ ul{
     border-bottom-right-radius: 3px;
     position: relative;
     border: 1px solid var(--basic-header);
+    z-index: 5;
 }
 .good:nth-child(2n){
     margin-right: 0px;
@@ -817,6 +1129,7 @@ ul{
 }
 .good:hover{
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    z-index: 2;
 }
 .good a{
     width: 358px;
@@ -845,7 +1158,7 @@ ul{
     top: -27px;
     box-shadow: 24px 0 0 0 var(--basic-white), -24px 0 0 0 var(--basic-white);
 }
-.good a::before:hover{
+.good a:hover::before{
     background-color: var(--basic-matterhorn);
 }
 .catalog_container{
@@ -863,24 +1176,24 @@ ul{
     list-style: none;
     position: relative;
 }
-/*
+
 .card{
-    display: none;
-    width: 358px;
-    height: 231px;
-    text-align: center;
-    background-color: var(--basic-header);
-    text-align: center;
+    content:"";
+    position: absolute;
+    z-index: 0;
 }
 .card:hover{
     content: "";
-    overflow: hidden;
     position: absolute;
+    display: block;
     width: 358px;
     height: 231px;
+    bottom:0;
+    left:0;
     background-color: var(--basic-header);
-    /*z-index: 1;
-}
+    text-align: center;
+    z-index: 20;
+}/*
 .card .filter_text:hover{
     color: var(--basic-wild-watermelon);
 }
@@ -963,3 +1276,6 @@ ul{
 }
 
 /*Grid*/
+
+/*Пробный слайдер*/
+
