--- a/css/Style.css
+++ b/css/Style.css
@@ -125,6 +125,7 @@ ul{
 }
 .site-navigation{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 436px;
     margin: 0;
@@ -308,12 +309,15 @@ ul{
 .catalog_items{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    height: 427px;
+    grid-row-gap: 10px;
+    /*height: 427px;*/
     column-gap: 39px;
     margin:0;
     padding:0;
     border-bottom: 2px solid var(--basic-header);
+    padding-bottom: 80px;
 }
+
 .catalog_item_container img{
     height: 146px;
     margin:0;
@@ -537,11 +541,15 @@ ul{
     padding: 0;
 }
 .map_size{
+    display: block;
     margin-top:80px;
-    margin-bottom: 68px;
+    margin-bottom:68px;
     min-width: 100%;
     height: 416px;
     border: none;
+    background-image: url(../img/map1.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 416px;
 }
 .map_card{
     display: block;
@@ -676,6 +684,7 @@ ul{
 
 /*Popup*/
 .popup_container_wrapper{
+    display: none;
     position: relative;
 }
 .popup_container{
@@ -698,22 +707,36 @@ ul{
     margin-right: 100px;
     flex-wrap: wrap;
 }
-.popup_close{
-    background-image: url("../img/close-cross.svg");
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    border: none;
-    width: 21px;
-    height: 21px;
-    opacity: 0.3;
+.popup_close::before{
+    content: "";
     position: absolute;
+    width: 21px;
+    height: 3px;
+    background-color: var(--basic-wild-watermelon);
+    opacity: 0.3;
     top: 78px;
     right: 90px;
+    cursor: pointer;
+    transform: rotate(45deg);
 }
-.popup_close:hover{
+.popup_close::after{
+    content: "";
+    position: absolute;
+    width: 21px;
+    height: 3px;
+    background-color: var(--basic-wild-watermelon);
+    opacity: 0.3;
+    top: 78px;
+    right: 90px;
+    cursor: pointer;
+    transform: rotate(-45deg);
+}
+.popup_close:hover::before,
+.popup_close:hover::after{
     opacity: 1;
 }
-.popup_close:active{
+.popup_close:active::before,
+.popup_close:active::after{
     opacity: 0.1;
 }
 .popup_header{
