--- a/css/style_big.css
+++ b/css/style_big.css
@@ -477,8 +477,8 @@ img {
 .partner_list{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    height: 178px;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin:0;
     padding:0;
     border-bottom: 2px solid var(--basic-header);
@@ -490,10 +490,11 @@ img {
     width: 290px;
     justify-content: center;
     align-items: center;
+    height: 178px;
     margin:0;
     padding:0;
 }
-.partner:not(:nth-child(0)) + .partner::before{
+.partner:not(:nth-child(4n)) + .partner::before{
     content: "";
     position: absolute;
     width: 2px;
@@ -1098,7 +1099,6 @@ img {
     background-color: transparent;
     background-image: url(../img/icon-down-dir.svg);
     background-repeat: no-repeat;
-    opacity: 0.2;
 }
 .arrow::after{
     content: "";
@@ -1215,6 +1215,13 @@ img {
     background-color: var(--basic-header);
     text-align: center;
     z-index: -1;
+    overflow: hidden;
+}
+.card_content{
+    max-height: 40px;
+    overflow: hidden;
+    font-size: 16px;
+    line-height: 18px;
 }
 .good:hover .card{
     z-index: 10;
